--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="./3/">3</a></li>
       <li><a href="./4/">4</a></li>
       <li><a href="./5/">5</a></li>
+      <li><a href="./HW05A/">HW05A</a></li>
+      <li><a href="./HW05B /">HW05B</a></li>
     </ul>
   </body>
 </html>
